--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,8 @@
   }
 }
 
-.additemcontainer {
+/* 
+  .additemcontainer {
   background-color: red;
   border-radius: 25px;
   position: absolute;
@@ -48,7 +49,9 @@
   padding: 7rem;
   align-content: left !important;
 }
+*/
 
+/*
 .itemdisplay {
   background-color: blue;
   border-radius: 25px;
@@ -60,3 +63,4 @@
   padding: 7rem;
   align-content: left !important;
 }
+*/
