--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,17 @@
 @font-face {
   font-family: ingpin;
-  src: url('./components/fonts/ingpin.ttf');
+  src: url('./components/fonts/TrajanPro-Regular.ttf');
   text-shadow: #61dafb;
 }
 
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color: #0E1019;
   font-family: ingpin;
+  overflow: hidden;
+  height: 100%;
+  position: fixed;
+  width: 100%;
 }
 
 .App-logo {
@@ -46,47 +50,162 @@
 }
 
 
-  .additemcontainer {
-  background-color: red;
-  border-radius: 25px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-  padding: 7rem;
-  align-content: left !important;
-  box-shadow: 5px 5px 0px #181717;
+.form-container {
+  background-color: #2c2f36;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 400px; /* Set a maximum width */
+  margin: 0 auto; /* Center horizontally */
+  text-align: center;
+  color: #fff;
+  position: relative;
+  z-index: 1000; /* Ensures form stays above the background */
 }
 
 .nav-item {
   
-  background-color: whitesmoke;
   border-radius: 10px;
   margin-right: 1rem;
 }
 
 .bgimage{
   position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  box-shadow: inset 0 0 50px #0E1019 !important;
+
 }
 
 .hometext{
   position: absolute;
+  text-align: left;
   top: 50%;
-  left: 50%;
+  left: 80%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
   color: aliceblue;
 }
 
 .navbar{
-  margin-top: 5rem;
+  margin-top: 3rem;
   z-index: 1000;
 }
+
+.rhodesisland{
+  z-index: 10;
+  right:80%;
+}
+
+.navbar-brand{
+  position: absolute;
+  left: 5rem;
+}
+
+.bgimage4{
+  position: absolute;
+}
+
+
+.formcontainer h2 {
+  margin-bottom: 10px;
+  font-size: 24px;
+}
+
+.formcontainer form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.formcontainer label {
+  margin: 10px 0;
+  width: 100%; /* Full width for uniformity */
+  text-align: left;
+}
+
+.formcontainer input,
+.formcontainer select {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+}
+
+.formcontainer button {
+  padding: 5px 5px;
+  margin-top: 5px;
+  border: none;
+  border-radius: 5px;
+  background-color: cornflowerblue; /* Green button */
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.formcontainer button:hover {
+  background-color: darkslategray; /* Darker green on hover */
+}
+
+.table-container {
+  background-color: #2c2f36; /* Dark background similar to the form */
+  position: relative;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+  color: #fff;
+}
+
+.table-container h3, .table-container h4 {
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+.table-container label {
+  margin-right: 10px;
+}
+
+.table-container select {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.table-container table {
+  width: 100%;
+  margin-top: 20px;
+  border-collapse: collapse;
+}
+
+.table-container table th, .table-container table td {
+  padding: 12px;
+  text-align: center;
+  border: 1px solid #ddd;
+  color: #fff;
+}
+
+.table-container table th {
+  background-color: #4CAF50; /* Green for headers */
+}
+
+.table-container table tr:nth-child(even) {
+  background-color: #333;
+}
+
+.table-container table tr:nth-child(odd) {
+  background-color: #444;
+}
+
+.table-container table tr:hover {
+  background-color: #555;
+}
+
+.table-container p {
+  margin-top: 20px;
+  color: #f1c40f;
+}
+
 /*
 .itemdisplay {
   background-color: blue;
